updated faq template page and adjusted  accordion styles

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v6 -  @version v6.0.6 -  11/19/2021 
+ * CA State Template v6 -  @version v6.0.6 -  11/24/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -17687,11 +17687,16 @@ cagov-accordion button.accordion-card-header {
   align-items: center;
   padding: 0 0 0 1rem;
   background-clip: border-box;
-  background-color: #ededef;
+  background-color: #f5f5f5;
   border: none;
   position: relative;
   width: 100%;
   line-height: 3rem;
+  padding-right: 0.5rem;
+}
+
+cagov-accordion button.accordion-card-header:hover .accordion-title {
+  text-decoration: none !important;
 }
 
 cagov-accordion.prog-enhanced button.accordion-card-header {
@@ -17701,7 +17706,7 @@ cagov-accordion.prog-enhanced button.accordion-card-header {
 cagov-accordion .accordion-title {
   text-align: left;
   margin-bottom: 0;
-  color: var(--primary-color, #064e66);
+  color: #046B99;
   margin-right: auto;
   width: 90%;
   padding: 0 0.5rem 0 0 !important;
@@ -17740,12 +17745,12 @@ cagov-accordion .collapsed {
   margin-bottom: 0 !important;
   font-size: 1.2rem !important;
   font-weight: 700;
-  color: var(--primary-color, #064e66);
+  color: #046B99;
   text-align: left !important;
 }
 
 button.accordion-card-header:hover {
-  background-color: var(--hover-color, #f9f9fa);
+  background-color: #f9f9fa;
 }
 
 button.accordion-card-header:hover .accordion-title {
@@ -17769,13 +17774,14 @@ cagov-accordion.prog-enhanced .accordion-alpha .plus-minus {
   height: 2.125rem;
   border: none;
   overflow: hidden;
+  margin-top: -2px;
   margin-left: 1rem;
-  color: var(--primary-color, #064e66);
+  color: #046B99;
   align-self: flex-start;
 }
 
 .prog-enhanced .accordion-alpha .plus-minus svg {
-  fill: var(--primary-color, #064e66);
+  fill: #046B99;
   width: 25px;
   height: 25px;
 }
