--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v6 -  @version v6.0.6 -  11/24/2021 
+ * CA State Template v6 -  @version v6.0.6 -  12/7/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -12712,16 +12712,15 @@ html {
 ----------------------------------------- */
 body {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.125rem;
   line-height: 1.5;
   color: #111111;
+  min-height: 100vh;
 }
 
-/* make body font size larger for mobile */
-@media (max-width: 767px) {
+@media (min-width: 576px) {
   body {
-    font-size: 19.2px;
-    font-size: 1.2rem;
+    font-size: calc(1.125rem + 0.3vw);
   }
 }
 
@@ -12751,6 +12750,36 @@ p {
   margin-bottom: 0.7rem;
 }
 
+@media (min-width: 576px) {
+  p {
+    margin-bottom: calc(0.7rem + 0.5vw);
+  }
+}
+
+.lead {
+  font-size: 1.25rem;
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 576px) {
+  .lead {
+    font-size: calc(1.25rem + 0.3vw);
+    margin-bottom: calc(1rem + 0.5vw);
+  }
+}
+
+.small {
+  font-size: 1rem;
+  margin-bottom: 0.65rem;
+}
+
+@media (min-width: 576px) {
+  .small {
+    font-size: calc(1rem + 0.3vw);
+    margin-bottom: calc(0.65rem + 0.5vw);
+  }
+}
+
 .ie9 p + h1, .ie9 p + .h1,
 .ie9 p + h2,
 .ie9 p + .h2,
@@ -12775,6 +12804,15 @@ h1, .h1,
   font-family: "Asap Condensed", sans-serif;
 }
 
+@media (min-width: 576px) {
+  h1, .h1,
+  .h1 {
+    font-size: calc(2.4rem + 0.5vw);
+    margin-top: calc(3rem + 0.5vw);
+    margin-bottom: calc(1.6rem + 0.5vw);
+  }
+}
+
 h2, .h2,
 .h2 {
   font-size: 31.04px;
@@ -12782,6 +12820,15 @@ h2, .h2,
   margin-top: 2.7rem;
   margin-bottom: 1.4rem;
   font-family: "Asap Condensed", sans-serif;
+}
+
+@media (min-width: 576px) {
+  h2, .h2,
+  .h2 {
+    font-size: calc(1.94rem + 0.5vw);
+    margin-top: calc(2.7rem + 0.5vw);
+    margin-bottom: calc(1.4rem + 0.5vw);
+  }
 }
 
 h3, .h3,
@@ -12793,6 +12840,15 @@ h3, .h3,
   font-family: "Asap Condensed", sans-serif;
 }
 
+@media (min-width: 576px) {
+  h3, .h3,
+  .h3 {
+    font-size: calc(1.54rem + 0.5vw);
+    margin-top: calc(2.4rem + 0.9vw);
+    margin-bottom: calc(1.2rem + 0.9vw);
+  }
+}
+
 h4, .h4,
 .h4 {
   font-size: 20px;
@@ -12800,6 +12856,15 @@ h4, .h4,
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-family: "Asap Condensed", sans-serif;
+}
+
+@media (min-width: 576px) {
+  h4, .h4,
+  .h4 {
+    font-size: calc(1.25rem + 0.5vw);
+    margin-top: calc(2rem + 0.9vw);
+    margin-bottom: calc(1rem + 0.9vw);
+  }
 }
 
 h5, .h5,
@@ -12811,6 +12876,15 @@ h5, .h5,
   font-family: "Asap Condensed", sans-serif;
 }
 
+@media (min-width: 576px) {
+  h5, .h5,
+  .h5 {
+    font-size: calc(1rem + 0.5vw);
+    margin-top: calc(1.7rem + 0.9vw);
+    margin-bottom: calc(0.8rem + 0.9vw);
+  }
+}
+
 h6, .h6,
 .h6 {
   font-size: 12.8px;
@@ -12820,26 +12894,12 @@ h6, .h6,
   font-family: "Asap Condensed", sans-serif;
 }
 
-@media (max-width: 767px) {
-  h1, .h1,
-  .h1 {
-    font-size: 40px;
-    font-size: 2.5rem;
-  }
-  h2, .h2,
-  .h2 {
-    font-size: 32px;
-    font-size: 2rem;
-  }
-  h3, .h3,
-  .h3 {
-    font-size: 25.6px;
-    font-size: 1.6rem;
-  }
-  h4, .h4,
-  .h4 {
-    font-size: 20.8px;
-    font-size: 1.3rem;
+@media (min-width: 576px) {
+  h6, .h6,
+  .h6 {
+    font-size: calc(0.8rem + 0.5vw);
+    margin-top: calc(1.4rem + 0.5vw);
+    margin-bottom: calc(0.6rem + 0.5vw);
   }
 }
 
@@ -14046,6 +14106,7 @@ a.list-group-item {
 }
 
 .global-footer .footer-links {
+  font-size: 1.125rem;
   line-height: 1.6rem;
 }
 
@@ -14054,7 +14115,8 @@ a.list-group-item {
 }
 
 .global-footer .copyright {
-  background: #EFEFEF;
+  font-size: 1rem;
+  background: #efefef;
   padding: 5px 0 24px;
 }
 
@@ -18559,7 +18621,7 @@ hr.hr-light {
 
 .panel .panel-heading .options .btn, .panel .card-heading .options .btn, .panel .card-header .options .btn, .card .panel-heading .options .btn, .card .card-heading .options .btn, .card .card-header .options .btn {
   padding: 1px 5px;
-  font-size: 0.88rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -18726,7 +18788,7 @@ hr.hr-light {
   float: right;
   margin-top: 12px;
   padding: 1px 5px;
-  font-size: 0.88rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -19326,7 +19388,7 @@ figcaption {
   float: right;
   margin-top: 12px;
   padding: 1px 5px;
-  font-size: 0.88rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -19445,7 +19507,7 @@ figcaption {
   float: right;
   margin-top: 12px;
   padding: 1px 5px;
-  font-size: 0.88rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -20018,7 +20080,7 @@ select:focus {
   background-color: #fff;
   border-color: #333;
   padding: 1px 5px;
-  font-size: 0.88rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   border-radius: 3px;
   float: right;
@@ -20104,7 +20166,7 @@ select:focus {
   background-color: #fff;
   border-color: #333;
   padding: 1px 5px;
-  font-size: 0.88rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -20300,8 +20362,8 @@ select:focus {
   position: absolute;
   top: 60%;
   left: 50%;
-  margin-left: -1.1rem;
-  margin-top: -1.65rem;
+  margin-left: -1rem;
+  margin-top: -1.5rem;
   z-index: 101;
   font-family: 'CaGov';
   font-size: 32px;
@@ -20496,21 +20558,14 @@ select:focus {
    HERO INFO - /source/scss/cagov/hero-info.scss
 ----------------------------------------- */
 @media (min-width: 768px) {
-  p-y-200--md {
+  .p-y-200--md {
     padding-top: 14.28571rem !important;
     padding-bottom: 14.28571rem !important;
   }
 }
 
-.lead {
-  font-size: 1.25rem;
-  font-weight: 300;
-}
-
 .display {
-  font-size: 3.5rem;
   font-weight: 300;
-  line-height: 1.1;
 }
 
 .modal-title {
@@ -20696,7 +20751,7 @@ select:focus {
   float: right;
   margin-top: 12px;
   padding: 1px 5px;
-  font-size: 0.88rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -21522,7 +21577,7 @@ fieldset[disabled] .btn-outline-secondary.active {
   border: 1px solid transparent;
   white-space: nowrap;
   padding: 6px 12px;
-  font-size: 1.1rem;
+  font-size: 1rem;
   line-height: 1.5;
   border-radius: 0;
   -webkit-user-select: none;
@@ -23567,7 +23622,7 @@ html:not(.ie8) .stats-highlight img {
 }
 
 .font-size-sm {
-  font-size: 0.825rem;
+  font-size: 0.75rem;
 }
 
 .font-size-70x {
