--- a/source/scss/cagov/global-footer.scss
+++ b/source/scss/cagov/global-footer.scss
@@ -2,31 +2,28 @@
    FOOTER - /source/scss/cagov/global-footer.scss
 ----------------------------------------- */
 
-
-
 .global-footer {
     @include link-variant($gray-lightest, $color-p1, none, underline);
     padding-top: 0;
 
-    
     ul {
-        @include list-unstyled();   // Remove styling from list
-        @extend .list-inline;     // Make list inline
+        @include list-unstyled(); // Remove styling from list
+        @extend .list-inline; // Make list inline
         @include clearfix();
         margin-left: -5px;
         margin: 5px 0;
-		
-		> li {
-		display: inline-block;
-		padding-left: 5px;
-		padding-right: 5px;
-	}
-	.list-inline-item {
-		display: inline-block;
-		&:not(:last-child) {
-			margin-right: 5px;
-		}
-	}
+
+        > li {
+            display: inline-block;
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+        .list-inline-item {
+            display: inline-block;
+            &:not(:last-child) {
+                margin-right: 5px;
+            }
+        }
 
         @media (max-width: $screen-xs-max) {
             // For xs screens, convert the list to two columns
@@ -35,25 +32,27 @@
                 float: left;
                 margin-right: 0 !important;
             }
-            
+
             a {
-                display: block;     // For xs screens make the link block so it fills the column
+                display: block; // For xs screens make the link block so it fills the column
                 margin-bottom: ($line-height-computed / 2);
             }
         }
     }
-    
+
     .footer-links {
-        line-height: 1.6rem;        // Keeps links centered verticaly by compensating for larger social media icons
-        
+        font-size: 1.125rem;
+        line-height: 1.6rem; // Keeps links centered verticaly by compensating for larger social media icons
+
         li {
             margin-right: 20px;
         }
     }
-    
+
     .copyright {
-        background:#EFEFEF;
-        padding:5px 0 $line-height-computed;
+        font-size: 1rem;
+        background: #efefef;
+        padding: 5px 0 $line-height-computed;
     }
 
     @media (max-width: $screen-xs-max) {
@@ -66,15 +65,15 @@
                 margin-left: 0;
             }
         }
-        
+
         .footer-links {
-            margin-top:  $spacer-y !important; }
+            margin-top: $spacer-y !important;
         }
     }
+}
 
 .sticky-footer {
     display: flex;
     flex-direction: column;
     height: 100vh; // Avoid the IE 10-11 `min-height` bug
 }
-
