--- a/source/scss/cagov/hero-info.scss
+++ b/source/scss/cagov/hero-info.scss
@@ -3,23 +3,15 @@
 ----------------------------------------- */
 
 @media (min-width: 768px) {
-    p-y-200--md {
+    .p-y-200--md {
         padding-top: 14.28571rem !important;
         padding-bottom: 14.28571rem !important;
     }
 }
 
-.lead {
-        font-size: 1.25rem;
-        font-weight: 300;
-    }
-
 .display {
-    font-size: 3.5rem;
     font-weight: 300;
-    line-height: 1.1;
 }
 .modal-title {
-	margin: 0;
-	}
-
+    margin: 0;
+}
