--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -4,15 +4,12 @@
 
 body {
     font-family: $font-family-sans-serif;
-    font-size: $font-size-base;
+    font-size: 1.125rem;
     line-height: $line-height-base;
     color: $text-color;
-}
-
-/* make body font size larger for mobile */
-@media (max-width: $screen-xs-max) {
-    body {
-        @include font-size(1.2);
+    min-height: 100vh;
+    @include media-breakpoint-up(sm) {
+        font-size: calc(1.125rem + 0.3vw);
     }
 }
 
@@ -42,8 +39,30 @@ a {
 // TYPOGRAPHY
 // --------------------------------------------------
 
+// Responsive Font Sizes
 p {
     margin-bottom: 0.7rem;
+    @include media-breakpoint-up(sm) {
+        margin-bottom: calc(0.7rem + 0.5vw);
+    }
+}
+
+.lead {
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+    @include media-breakpoint-up(sm) {
+        font-size: calc(1.25rem + 0.3vw);
+        margin-bottom: calc(1rem + 0.5vw);
+    }
+}
+
+.small {
+    font-size: 1rem;
+    margin-bottom: 0.65rem;
+    @include media-breakpoint-up(sm) {
+        font-size: calc(1rem + 0.3vw);
+        margin-bottom: calc(0.65rem + 0.5vw);
+    }
 }
 
 .ie9 p {
@@ -63,12 +82,17 @@ h1,
     }
 }
 
-// OVER RIDE BOOTSTRAP SIZES
+// Responsive Font Sizes
 h1,
 .h1 {
     @include font-size(2.4);
     margin-top: 3rem;
     margin-bottom: 1.6rem;
+    @include media-breakpoint-up(sm) {
+        font-size: calc(2.4rem + 0.5vw);
+        margin-top: calc(3rem + 0.5vw);
+        margin-bottom: calc(1.6rem + 0.5vw);
+    }
     font-family: $headings-font-family;
 }
 
@@ -77,6 +101,12 @@ h2,
     @include font-size(1.94);
     margin-top: 2.7rem;
     margin-bottom: 1.4rem;
+
+    @include media-breakpoint-up(sm) {
+        font-size: calc(1.94rem + 0.5vw);
+        margin-top: calc(2.7rem + 0.5vw);
+        margin-bottom: calc(1.4rem + 0.5vw);
+    }
     font-family: $headings-font-family;
 }
 
@@ -85,6 +115,11 @@ h3,
     @include font-size(1.54);
     margin-top: 2.4rem;
     margin-bottom: 1.2rem;
+    @include media-breakpoint-up(sm) {
+        font-size: calc(1.54rem + 0.5vw);
+        margin-top: calc(2.4rem + 0.9vw);
+        margin-bottom: calc(1.2rem + 0.9vw);
+    }
     font-family: $headings-font-family;
 }
 
@@ -93,6 +128,12 @@ h4,
     @include font-size(1.25);
     margin-top: 2rem;
     margin-bottom: 1rem;
+    @include media-breakpoint-up(sm) {
+        font-size: calc(1.25rem + 0.5vw);
+        margin-top: calc(2rem + 0.9vw);
+        margin-bottom: calc(1rem + 0.9vw);
+    }
+
     font-family: $headings-font-family;
 }
 
@@ -101,6 +142,12 @@ h5,
     @include font-size(1);
     margin-top: 1.7rem;
     margin-bottom: 0.8rem;
+
+    @include media-breakpoint-up(sm) {
+        font-size: calc(1rem + 0.5vw);
+        margin-top: calc(1.7rem + 0.9vw);
+        margin-bottom: calc(0.8rem + 0.9vw);
+    }
     font-family: $headings-font-family;
 }
 
@@ -109,30 +156,13 @@ h6,
     @include font-size(0.8);
     margin-top: 1.4rem;
     margin-bottom: 0.6rem;
+    @include media-breakpoint-up(sm) {
+        font-size: calc(0.8rem + 0.5vw);
+        margin-top: calc(1.4rem + 0.5vw);
+        margin-bottom: calc(0.6rem + 0.5vw);
+    }
+
     font-family: $headings-font-family;
-}
-
-@media (max-width: $screen-xs-max) {
-    // LARGER HEADING SIZE FOR MOBILE
-    h1,
-    .h1 {
-        @include font-size(2.5);
-    }
-
-    h2,
-    .h2 {
-        @include font-size(2);
-    }
-
-    h3,
-    .h3 {
-        @include font-size(1.6);
-    }
-
-    h4,
-    .h4 {
-        @include font-size(1.3);
-    }
 }
 
 h1,
