--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -98,7 +98,7 @@ $font-family-serif: "Merriweather", serif;
 $font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base: $font-family-sans-serif !default;
 
-$font-size-base: 1.1rem !global;
+$font-size-base: 1rem !global;
 $font-size-large: $font-size-base * 1.25 !default; // ~18px
 $font-size-small: $font-size-base * 0.85 !default; // ~12px
 $font-size-x-small: $font-size-base * 0.8; // ~11px
@@ -967,3 +967,6 @@ $alert-warning-color: $red-dark;
 $alert-warning-bkg: $yellow;
 $alert-danger-color: $red;
 $alert-danger-hover: darken($red, 10%);
+
+// Golden Ratio (for responsive typography)
+$ratio: 1.277777778;
