--- a/source/scss/cagov/global-header.scss
+++ b/source/scss/cagov/global-header.scss
@@ -152,6 +152,7 @@
             // Beta 5.0 addition
             position: absolute;
             margin-top: -5px;
+            margin-left: 15px;
         }
     }
     // Goes full width on 767 breakpoint
