--- a/source/scss/cagov/accordion.scss
+++ b/source/scss/cagov/accordion.scss
@@ -8,7 +8,7 @@ cagov-accordion .cagov-accordion-card {
   border-radius: 0.3rem !important;
   margin-bottom: 0;
   min-height: 3rem;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   border: solid 1px #ededef !important;
 }
 
@@ -46,9 +46,13 @@ cagov-accordion .accordion-title {
   color: $link-color;
   margin-right: auto;
   width: 90%;
-  padding: 0 0.5rem 0 0 !important;
+  padding: 0.8rem 0.5rem 0.8rem 0 !important;
   font-size: 1.125rem;
-  font-weight: bold;
+  @include media-breakpoint-up(sm) {
+    font-size: calc(1.125rem + 0.3vw);
+  }
+  font-weight: 700;
+  line-height: 1.5;
 }
 
 cagov-accordion.prog-enhanced .accordion-card-container {
@@ -106,7 +110,7 @@ cagov-accordion.prog-enhanced .accordion-alpha .plus-minus {
   height: 2.125rem;
   border: none;
   overflow: hidden;
-  margin-top: -2px;
+  margin-top: 0.15rem;
   margin-left: 1rem;
   color: $link-color;
   align-self: flex-start;
