--- a/source/scss/cagov/icon-font.scss
+++ b/source/scss/cagov/icon-font.scss
@@ -4,10 +4,8 @@
 
 @font-face {
   font-family: "CaGov";
-  src: url("../fonts/CaGov.eot?ocljyw");
-  src: url("../fonts/CaGov.eot?ocljyw#iefix") format("embedded-opentype"),
-    url("../fonts/CaGov.ttf?ocljyw") format("truetype"), url("../fonts/CaGov.woff?ocljyw") format("woff"),
-    url("../fonts/CaGov.svg??ocljyw#CaGov") format("svg");
+  src: url("../fonts/CaGov.ttf?ocljyw") format("truetype"), url("fonts/ca-gov-icon.woff?t3czrh") format("woff"),
+    url("../fonts/CaGov.woff2?ocljyw") format("woff2"), url("../fonts/CaGov.svg??ocljyw#CaGov") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -28,6 +26,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ca-gov-icon-github:before {
+  content: "\ea21";
+}
 .ca-gov-icon-pdf-text:before {
   content: "\ea20";
 }
