--- a/css/cagov.font-only.css
+++ b/css/cagov.font-only.css
@@ -1,13 +1,12 @@
 /**
- * CA State Template v6 -  @version v6.0.6 -  11/24/2021 
+ * CA State Template v6 -  @version v6.0.7 -  12/8/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    ICON FONTS - /source/scss/cagov/icon-font.scss
 ----------------------------------------- */
 @font-face {
   font-family: "CaGov";
-  src: url("../fonts/CaGov.eot?ocljyw");
-  src: url("../fonts/CaGov.eot?ocljyw#iefix") format("embedded-opentype"), url("../fonts/CaGov.ttf?ocljyw") format("truetype"), url("../fonts/CaGov.woff?ocljyw") format("woff"), url("../fonts/CaGov.svg??ocljyw#CaGov") format("svg");
+  src: url("../fonts/CaGov.ttf?ocljyw") format("truetype"), url("fonts/ca-gov-icon.woff?t3czrh") format("woff"), url("../fonts/CaGov.woff2?ocljyw") format("woff2"), url("../fonts/CaGov.svg??ocljyw#CaGov") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +24,10 @@
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.ca-gov-icon-github:before {
+  content: "\ea21";
 }
 
 .ca-gov-icon-pdf-text:before {
