updated responsive font ratio for body to vw0.2

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v6 -  @version v6.0.7 -  12/8/2021 
+ * CA State Template v6 -  @version v6.0.7 -  12/10/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -12839,17 +12839,16 @@ body {
   font-size: 1.125rem;
   line-height: 1.5;
   color: #111111;
-  min-height: 100vh;
 }
 
 @media (min-width: 576px) {
   body {
-    font-size: calc(1.125rem + 0.3vw);
+    font-size: calc(1.125rem + 0.2vw);
   }
 }
 
 a {
-  color: #046B99;
+  color: #046b99;
 }
 
 a:hover {
@@ -12876,7 +12875,7 @@ p {
 
 @media (min-width: 576px) {
   p {
-    margin-bottom: calc(0.7rem + 0.5vw);
+    margin-bottom: calc(0.7rem + 0.2vw);
   }
 }
 
@@ -12887,8 +12886,8 @@ p {
 
 @media (min-width: 576px) {
   .lead {
-    font-size: calc(1.25rem + 0.3vw);
-    margin-bottom: calc(1rem + 0.5vw);
+    font-size: calc(1.25rem + 0.2vw);
+    margin-bottom: calc(1rem + 0.2vw);
   }
 }
 
@@ -12899,8 +12898,8 @@ p {
 
 @media (min-width: 576px) {
   .small {
-    font-size: calc(1rem + 0.3vw);
-    margin-bottom: calc(0.65rem + 0.5vw);
+    font-size: calc(1rem + 0.2vw);
+    margin-bottom: calc(0.65rem + 0.2vw);
   }
 }
 
@@ -12910,7 +12909,7 @@ p {
 
 @media (min-width: 576px) {
   .btn {
-    font-size: calc(1rem + 0.3vw);
+    font-size: calc(1rem + 0.2vw);
   }
 }
 
@@ -12920,7 +12919,7 @@ p {
 
 @media (min-width: 576px) {
   .btn-lg, .btn-group-lg > .btn {
-    font-size: calc(1.125rem + 0.3vw);
+    font-size: calc(1.125rem + 0.2vw);
   }
 }
 
@@ -12930,7 +12929,7 @@ p {
 
 @media (min-width: 576px) {
   .btn-sm, .btn-group-sm > .btn {
-    font-size: calc(0.9rem + 0.3vw);
+    font-size: calc(0.9rem + 0.2vw);
   }
 }
 
@@ -12951,7 +12950,6 @@ h1 span[class^="ca-gov-icon-"]:first-child, .h1 span[class^="ca-gov-icon-"]:firs
 
 h1, .h1,
 .h1 {
-  font-size: 38.4px;
   font-size: 2.4rem;
   margin-top: 3rem;
   margin-bottom: 1.6rem;
@@ -12969,7 +12967,6 @@ h1, .h1,
 
 h2, .h2,
 .h2 {
-  font-size: 31.04px;
   font-size: 1.94rem;
   margin-top: 2.7rem;
   margin-bottom: 1.4rem;
@@ -12987,7 +12984,6 @@ h2, .h2,
 
 h3, .h3,
 .h3 {
-  font-size: 24.64px;
   font-size: 1.54rem;
   margin-top: 2.4rem;
   margin-bottom: 1.2rem;
@@ -12998,14 +12994,13 @@ h3, .h3,
   h3, .h3,
   .h3 {
     font-size: calc(1.54rem + 0.5vw);
-    margin-top: calc(2.4rem + 0.9vw);
-    margin-bottom: calc(1.2rem + 0.9vw);
+    margin-top: calc(2.4rem + 0.5vw);
+    margin-bottom: calc(1.2rem + 0.5vw);
   }
 }
 
 h4, .h4,
 .h4 {
-  font-size: 20px;
   font-size: 1.25rem;
   margin-top: 2rem;
   margin-bottom: 1rem;
@@ -13016,14 +13011,13 @@ h4, .h4,
   h4, .h4,
   .h4 {
     font-size: calc(1.25rem + 0.5vw);
-    margin-top: calc(2rem + 0.9vw);
-    margin-bottom: calc(1rem + 0.9vw);
+    margin-top: calc(2rem + 0.5vw);
+    margin-bottom: calc(1rem + 0.5vw);
   }
 }
 
 h5, .h5,
 .h5 {
-  font-size: 16px;
   font-size: 1rem;
   margin-top: 1.7rem;
   margin-bottom: 0.8rem;
@@ -13034,14 +13028,13 @@ h5, .h5,
   h5, .h5,
   .h5 {
     font-size: calc(1rem + 0.5vw);
-    margin-top: calc(1.7rem + 0.9vw);
-    margin-bottom: calc(0.8rem + 0.9vw);
+    margin-top: calc(1.7rem + 0.5vw);
+    margin-bottom: calc(0.8rem + 0.5vw);
   }
 }
 
 h6, .h6,
 .h6 {
-  font-size: 12.8px;
   font-size: 0.8rem;
   margin-top: 1.4rem;
   margin-bottom: 0.6rem;
@@ -13095,7 +13088,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6,
 }
 
 code {
-  color: #D11A6C;
+  color: #d11a6c;
 }
 
 .wrap {
@@ -13225,7 +13218,7 @@ a.list-group-item {
 
 /* snapchat */
 .ca-gov-icon-share-snapchat {
-  color: #FFFC00 !important;
+  color: #fffc00 !important;
 }
 
 .ca-gov-icon-share-snapchat:hover, .ca-gov-icon-share-snapchat:focus {
@@ -13270,7 +13263,7 @@ a.list-group-item {
 
 /* instagram */
 .ca-gov-icon-share-instagram {
-  color: #C13584 !important;
+  color: #c13584 !important;
 }
 
 .ca-gov-icon-share-instagram:hover, .ca-gov-icon-share-instagram:focus {
@@ -15263,7 +15256,7 @@ table.gsc-search-box td {
 
 @media (min-width: 576px) {
   .top-level-nav .nav-item {
-    font-size: calc(1rem + 0.3vw);
+    font-size: calc(1rem + 0.2vw);
   }
 }
 
@@ -16061,14 +16054,13 @@ table.gsc-search-box td {
 }
 
 a.second-level-link {
-  font-size: 17.6px;
-  font-size: 1.1rem;
+  font-size: 1.125rem;
   padding: 10px;
 }
 
 @media (min-width: 576px) {
   a.second-level-link {
-    font-size: calc(1.1rem + 0.3vw);
+    font-size: calc(1.125rem + 0.2vw);
   }
 }
 
@@ -16095,13 +16087,12 @@ a.second-level-link [class^="ca-gov-icon-"] {
 
 .link-description {
   display: block;
-  font-size: 16px;
   font-size: 1rem;
 }
 
 @media (min-width: 576px) {
   .link-description {
-    font-size: calc(1rem + 0.3vw);
+    font-size: calc(1rem + 0.2vw);
   }
 }
 
@@ -16803,20 +16794,18 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 .utility-header .settings-links {
-  font-size: 16px;
   font-size: 1rem;
   text-align: right;
 }
 
 @media (min-width: 576px) {
   .utility-header .settings-links {
-    font-size: calc(1rem + 0.3vw);
+    font-size: calc(1rem + 0.2vw);
   }
 }
 
 @media (max-width: 767px) {
   .utility-header .settings-links {
-    font-size: 16px;
     font-size: 1rem;
     text-align: right;
     padding-right: 0;
@@ -18030,7 +18019,7 @@ html {
 }
 
 .alert-severe {
-  background: #FDB81E;
+  background: #fdb81e;
 }
 
 .alert-severe .close {
@@ -18093,7 +18082,7 @@ html {
   border-top: 0;
   position: relative;
   display: block;
-  color: #046B99;
+  color: #046b99;
 }
 
 .tab-group .nav-tabs li > a, .tab-group .nav-tabs li > a:hover {
@@ -18319,7 +18308,7 @@ cagov-accordion.prog-enhanced button.accordion-card-header {
 cagov-accordion .accordion-title {
   text-align: left;
   margin-bottom: 0;
-  color: #046B99;
+  color: #046b99;
   margin-right: auto;
   width: 90%;
   padding: 0.8rem 0.5rem 0.8rem 0 !important;
@@ -18330,7 +18319,7 @@ cagov-accordion .accordion-title {
 
 @media (min-width: 576px) {
   cagov-accordion .accordion-title {
-    font-size: calc(1.125rem + 0.3vw);
+    font-size: calc(1.125rem + 0.2vw);
   }
 }
 
@@ -18365,7 +18354,7 @@ cagov-accordion .collapsed {
   margin-bottom: 0 !important;
   font-size: 1.2rem !important;
   font-weight: 700;
-  color: #046B99;
+  color: #046b99;
   text-align: left !important;
 }
 
@@ -18396,12 +18385,12 @@ cagov-accordion.prog-enhanced .accordion-alpha .plus-minus {
   overflow: hidden;
   margin-top: 0.15rem;
   margin-left: 1rem;
-  color: #046B99;
+  color: #046b99;
   align-self: flex-start;
 }
 
 .prog-enhanced .accordion-alpha .plus-minus svg {
-  fill: #046B99;
+  fill: #046b99;
   width: 25px;
   height: 25px;
 }
@@ -18460,7 +18449,7 @@ cagov-accordion.prog-enhanced .accordion-alpha .plus-minus {
 }
 
 .accordion__trigger {
-  color: #046B99;
+  color: #046b99;
   text-decoration: underline;
   text-decoration-style: dotted;
   text-decoration-thickness: from-font;
@@ -18605,13 +18594,12 @@ cagov-accordion.prog-enhanced .accordion-alpha .plus-minus {
 .breadcrumb {
   padding-left: 0;
   background-color: transparent;
-  font-size: 16px;
   font-size: 1rem;
 }
 
 @media (min-width: 576px) {
   .breadcrumb {
-    font-size: calc(1rem + 0.3vw);
+    font-size: calc(1rem + 0.2vw);
   }
 }
 
@@ -20083,14 +20071,14 @@ label {
 }
 
 .input-group-text.is-valid {
-  color: #32852E;
-  border-color: #32852E;
+  color: #32852e;
+  border-color: #32852e;
   background-color: #74cd6f;
 }
 
 .input-group-text.is-invalid {
-  color: #D24532;
-  border-color: #D24532;
+  color: #d24532;
+  border-color: #d24532;
   background-color: #f7ddd9;
 }
 
@@ -20107,7 +20095,7 @@ label {
 }
 
 .required-label {
-  color: #D24532;
+  color: #d24532;
 }
 
 .form-inline-columns .form-group {
@@ -20159,13 +20147,13 @@ label {
 }
 
 .has-error .input-group-addon {
-  color: #D24532;
-  border-color: #D24532;
+  color: #d24532;
+  border-color: #d24532;
   background-color: #f7ddd9;
 }
 
 .has-error .form-control {
-  border-color: #D24532;
+  border-color: #d24532;
 }
 
 .has-success .feedback {
@@ -20173,13 +20161,13 @@ label {
 }
 
 .has-success .input-group-addon {
-  color: #32852E;
-  border-color: #32852E;
+  color: #32852e;
+  border-color: #32852e;
   background-color: #74cd6f;
 }
 
 .has-success .form-control {
-  border-color: #32852E;
+  border-color: #32852e;
 }
 
 .file-attach input[type="file"] {
@@ -20360,7 +20348,7 @@ input[type="radio"]:focus + .btn {
 }
 
 .valid-feedback {
-  color: #32852E;
+  color: #32852e;
 }
 
 /* Accessibilty focus */
@@ -21679,7 +21667,6 @@ ul.list-overstated a {
    /source/scss/cagov/blockquote.scss
 ----------------------------------------- */
 blockquote {
-  font-size: 18px;
   font-size: 1.125rem;
   padding: 11px 22px;
   margin: 0 0 22px;
@@ -21688,7 +21675,7 @@ blockquote {
 
 @media (min-width: 576px) {
   blockquote {
-    font-size: calc(1.125rem + 0.3vw);
+    font-size: calc(1.125rem + 0.2vw);
   }
 }
 
@@ -22539,7 +22526,7 @@ fieldset[disabled] .btn-more {
   outline: none;
   min-height: 240px;
   color: #E1F2F7;
-  background: #046B99;
+  background: #046b99;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -23215,12 +23202,12 @@ html:not(.ie8) .stats-highlight img {
 
 .bg-danger-warning-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, #C2570F, #D24532);
+  background-image: linear-gradient(225deg, #c2570f, #d24532);
 }
 
 .bg-info-success-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, #1C7DB5, #32852E);
+  background-image: linear-gradient(225deg, #1c7db5, #32852e);
 }
 
 /* Radial Gradients */
@@ -23655,11 +23642,11 @@ html:not(.ie8) .stats-highlight img {
 }
 
 .text-primary {
-  color: #006CE0 !important;
+  color: #006ce0 !important;
 }
 
 .text-success {
-  color: #1F7F35 !important;
+  color: #1f7f35 !important;
 }
 
 .text-info {
