--- a/source/scss/cagov/accordion.scss
+++ b/source/scss/cagov/accordion.scss
@@ -47,9 +47,9 @@ cagov-accordion .accordion-title {
   margin-right: auto;
   width: 90%;
   padding: 0.8rem 0.5rem 0.8rem 0 !important;
-  font-size: 1.125rem;
+  font-size: $font-size-regular;
   @include media-breakpoint-up(sm) {
-    font-size: calc(1.125rem + 0.3vw);
+    font-size: calc(#{$font-size-regular} + #{$ratio});
   }
   font-weight: 700;
   line-height: 1.5;
