--- a/css/colorscheme-shasta.css
+++ b/css/colorscheme-shasta.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v6 -  @version v6.0.7 -  12/8/2021 
+ * CA State Template v6 -  @version v6.0.7 -  12/10/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    SHASTA
@@ -588,7 +588,7 @@ nav-item-search:focus .first-level-link > span[class^="ca-gov-icon"] {
 
 .list-group.section-danger .list-group-item,
 .list-group.section-danger .list-group-item > button {
-  background: #D24532 !important;
+  background: #d24532 !important;
   color: #000000 !important;
 }
 
@@ -1332,7 +1332,7 @@ fieldset[disabled] .card-inverted .btn-standout.active {
 }
 
 .section-danger, .card-danger {
-  background: #D24532;
+  background: #d24532;
   color: #000000;
 }
 
@@ -1746,7 +1746,7 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-danger {
-  background: #D24532;
+  background: #d24532;
   color: #000000;
 }
 
@@ -1781,8 +1781,8 @@ a.text-white:not(.btn):hover {
    /source/scss/colorscheme/cs-cards.scss
 ----------------------------------------- */
 .card-primary {
-  background-color: #046B99;
-  border-color: #046B99;
+  background-color: #046b99;
+  border-color: #046b99;
   color: #ffffff;
 }
 
@@ -1809,12 +1809,12 @@ a.text-white:not(.btn):hover {
 }
 
 .card-primary .card-header {
-  border-bottom: 1px solid #046B99;
+  border-bottom: 1px solid #046b99;
   background-color: #035a80;
 }
 
 .card-primary .card-footer {
-  border-top: 1px solid #046B99;
+  border-top: 1px solid #046b99;
   background-color: #035a80;
 }
 
@@ -1857,8 +1857,8 @@ a.text-white:not(.btn):hover {
 }
 
 .card-success {
-  background-color: #32852E;
-  border-color: #32852E;
+  background-color: #32852e;
+  border-color: #32852e;
   color: #ffffff;
 }
 
@@ -1885,18 +1885,18 @@ a.text-white:not(.btn):hover {
 }
 
 .card-success .card-header {
-  border-bottom: 1px solid #32852E;
+  border-bottom: 1px solid #32852e;
   background-color: #2b7227;
 }
 
 .card-success .card-footer {
-  border-top: 1px solid #32852E;
+  border-top: 1px solid #32852e;
   background-color: #2b7227;
 }
 
 .card-info {
-  background-color: #1C7DB5;
-  border-color: #1C7DB5;
+  background-color: #1c7db5;
+  border-color: #1c7db5;
   color: #ffffff;
 }
 
@@ -1923,18 +1923,18 @@ a.text-white:not(.btn):hover {
 }
 
 .card-info .card-header {
-  border-bottom: 1px solid #1C7DB5;
+  border-bottom: 1px solid #1c7db5;
   background-color: #196e9f;
 }
 
 .card-info .card-footer {
-  border-top: 1px solid #1C7DB5;
+  border-top: 1px solid #1c7db5;
   background-color: #196e9f;
 }
 
 .card-warning {
-  background-color: #C2570F;
-  border-color: #C2570F;
+  background-color: #c2570f;
+  border-color: #c2570f;
   color: #ffffff;
 }
 
@@ -1961,18 +1961,18 @@ a.text-white:not(.btn):hover {
 }
 
 .card-warning .card-header {
-  border-bottom: 1px solid #C2570F;
+  border-bottom: 1px solid #c2570f;
   background-color: #aa4c0d;
 }
 
 .card-warning .card-footer {
-  border-top: 1px solid #C2570F;
+  border-top: 1px solid #c2570f;
   background-color: #aa4c0d;
 }
 
 .card-danger {
-  background-color: #D24532;
-  border-color: #D24532;
+  background-color: #d24532;
+  border-color: #d24532;
   color: #000000;
 }
 
@@ -1999,12 +1999,12 @@ a.text-white:not(.btn):hover {
 }
 
 .card-danger .card-header {
-  border-bottom: 1px solid #D24532;
+  border-bottom: 1px solid #d24532;
   background-color: #c03c2a;
 }
 
 .card-danger .card-footer {
-  border-top: 1px solid #D24532;
+  border-top: 1px solid #d24532;
   background-color: #c03c2a;
 }
 
@@ -2242,7 +2242,7 @@ a.text-white:not(.btn):hover {
 }
 
 .panel-overstated .panel-body a:not(.btn), .panel-overstated .card-body a:not(.btn), .card-overstated .panel-body a:not(.btn), .card-overstated .card-body a:not(.btn) {
-  color: #046B99;
+  color: #046b99;
   text-decoration: none;
 }
 
@@ -2490,7 +2490,7 @@ a.text-white:not(.btn):hover {
 }
 
 .panel-standout .panel-body a:not(.btn), .panel-standout .card-body a:not(.btn), .card-standout .panel-body a:not(.btn), .card-standout .card-body a:not(.btn) {
-  color: #046B99;
+  color: #046b99;
   text-decoration: none;
 }
 
