Made sure that rounded corners are wisible on hover in .btn-hover #142

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -22239,42 +22239,52 @@ fieldset[disabled] .btn-more {
 
 .btn-default.btn-hover:hover {
   background-color: #fff;
+  overflow: hidden;
 }
 
 .btn-default.btn-hover:before {
   background: whitesmoke;
+  overflow: hidden;
 }
 
 .btn-primary.btn-hover:hover {
   background-color: #046B99;
+  overflow: hidden;
 }
 
 .btn-primary.btn-hover:before {
   background: #0583bc;
+  overflow: hidden;
 }
 
 .btn-highlight.btn-hover:hover {
   background-color: #FDB81E;
+  overflow: hidden;
 }
 
 .btn-highlight.btn-hover:before {
   background: #fdc341;
+  overflow: hidden;
 }
 
 .btn-standout.btn-hover:hover {
   background-color: #323A45;
+  overflow: hidden;
 }
 
 .btn-standout.btn-hover:before {
   background: #414b5a;
+  overflow: hidden;
 }
 
 .btn-secondary.btn-hover:hover {
   background-color: whitesmoke;
+  overflow: hidden;
 }
 
 .btn-secondary.btn-hover:before {
   background: #fff;
+  overflow: hidden;
 }
 
 .btn-outline-primary.btn-hover:hover {
@@ -22328,7 +22338,8 @@ fieldset[disabled] .btn-more {
 }
 
 /* btn-next, prev */
-.btn-next span, .btn-prev span {
+.btn-next span,
+.btn-prev span {
   cursor: pointer;
   display: inline-block;
   position: relative;
@@ -22336,8 +22347,8 @@ fieldset[disabled] .btn-more {
 }
 
 .btn-next span:after {
-  content: '\39';
-  font-family: 'CaGov';
+  content: "\39";
+  font-family: "CaGov";
   position: absolute;
   opacity: 0;
   top: 0;
@@ -22355,8 +22366,8 @@ fieldset[disabled] .btn-more {
 }
 
 .btn-prev span:before {
-  content: '\38';
-  font-family: 'CaGov';
+  content: "\38";
+  font-family: "CaGov";
   position: absolute;
   opacity: 0;
   top: 0;
