--- a/source/scss/cagov/button.scss
+++ b/source/scss/cagov/button.scss
@@ -23,81 +23,99 @@
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-primary {
-    @include better-button($white, $color-p2, $color-p2, $white,  darken($color-p2, 7%), darken($color-p2, 7%)); // beta 5.0 addition
+    @include better-button(
+        $white,
+        $color-p2,
+        $color-p2,
+        $white,
+        darken($color-p2, 7%),
+        darken($color-p2, 7%)
+    ); // beta 5.0 addition
     //border-width:2px;
-	-webkit-transition: all 0.5s;
-    transition:all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-primary {
-    @include better-button($color-p2, $white, $color-p2, $white,  $color-p2, darken($color-p2, 7%)); // beta 6.0 addition
+    @include better-button($color-p2, $white, $color-p2, $white, $color-p2, darken($color-p2, 7%)); // beta 6.0 addition
     //border-width:2px;
-	-webkit-transition: all 0.5s;
-    transition:all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 .btn-default {
-    @include better-button($gray-base, rgba(255,255,255,.65), $gray-base, $gray-base, rgba(255,255,255,1), $gray-base);
+    @include better-button(
+        $gray-base,
+        rgba(255, 255, 255, 0.65),
+        $gray-base,
+        $gray-base,
+        rgba(255, 255, 255, 1),
+        $gray-base
+    );
     //border-width:2px;
-	-webkit-transition: all 0.5s;
-    transition:all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 // beta 5.0 addition
 .btn-standout {
-    @include better-button($white, $color-p3, $color-p3, $white,  darken($color-p3, 7%), darken($color-p3, 7%));
+    @include better-button($white, $color-p3, $color-p3, $white, darken($color-p3, 7%), darken($color-p3, 7%));
     //border-width:2px;
-	-webkit-transition: all 0.5s;
-    transition:all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-standout {
-    @include better-button($color-p3, $white, $color-p3, $white,  $color-p3, darken($color-p3, 7%)); // beta 6.0 addition
+    @include better-button($color-p3, $white, $color-p3, $white, $color-p3, darken($color-p3, 7%)); // beta 6.0 addition
     //border-width:2px;
-	-webkit-transition: all 0.5s;
-    transition:all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
-
 
 // beta 5.0 addition
 .btn-highlight {
-    @include better-button($text-color, $color-p1, $color-p1, $color-p3,  darken($color-p1, 7%), darken($color-p1, 7%));
+    @include better-button($text-color, $color-p1, $color-p1, $color-p3, darken($color-p1, 7%), darken($color-p1, 7%));
     //border-width:2px;
-	-webkit-transition: all 0.5s;
-    transition:all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-highlight {
-    @include better-button($text-color, $white, $color-p1, $text-color,  $color-p1, darken($color-p1, 7%)); // beta 6.0 addition
+    @include better-button(
+        $text-color,
+        $white,
+        $color-p1,
+        $text-color,
+        $color-p1,
+        darken($color-p1, 7%)
+    ); // beta 6.0 addition
     //border-width:2px;
-	-webkit-transition: all 0.5s;
-    transition:all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
-
 
 .btn-secondary {
     @include better-button($gray, $gray-lightest, $gray, $link-hover-color, #fff, $gray-base);
-    border-width:1px;
+    border-width: 1px;
     //transition:all 0.5s;
-    
+
     &.active {
-        background:$gray;
-        color:#fff;
-        box-shadow:none;
+        background: $gray;
+        color: #fff;
+        box-shadow: none;
     }
 }
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-secondary {
-    @include better-button($gray, $white, $gray, $white,  $gray, darken($gray, 7%)); // beta 6.0 addition
+    @include better-button($gray, $white, $gray, $white, $gray, darken($gray, 7%)); // beta 6.0 addition
     //border-width:2px;
-	-webkit-transition: all 0.5s;
-    transition:all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
-
 
 //
 // Default look and feel for more buttons
@@ -106,35 +124,35 @@
 .btn-more {
     @include btn();
     @include btn-block();
-    background-color: #fff;     // Fallback
-    @include rgba (#ffffff, .7);
+    background-color: #fff; // Fallback
+    @include rgba(#ffffff, 0.7);
     // background-color: $rgba;
     @include font-size(1.25);
-    
+
     .more-title {
-        display:block;
+        display: block;
     }
-    
+
     .more-icon {
         @include font-size(1.5);
     }
 }
 
 .btn-more:focus {
-	outline: #2ea3f2 solid 2px;
-	}
-
-.btn-more.inverse {
-    background-color: #000;     // Fallback
-    //.rgba (#000, .64);
-    //background-color: $rgba;
-    color:#fff;
-    
-    &:hover, &:focus {
-        color:$color-p1;
-    }
+    outline: #2ea3f2 solid 2px;
 }
 
+.btn-more.inverse {
+    background-color: #000; // Fallback
+    //.rgba (#000, .64);
+    //background-color: $rgba;
+    color: #fff;
+
+    &:hover,
+    &:focus {
+        color: $color-p1;
+    }
+}
 
 //
 // Justified mobile button groups in Site Settings
@@ -176,168 +194,172 @@
     .btn {
         @include m-r-sm();
         @include m-b-sm();
-        
+
         @media (max-width: $screen-xs-max) {
             @include m-b-sm();
         }
     }
 }
-  // Backward compatibility (bootstrap 3 leftovers)
-  .btn-xs {
-		padding: 0.17rem 0.35rem;
-		font-size: 0.85rem;
-	  }
+// Backward compatibility (bootstrap 3 leftovers)
+.btn-xs {
+    padding: 0.17rem 0.35rem;
+    font-size: 0.85rem;
+}
 
+// Hover effects
 
-  // Hover effects
-
-  /* btn-hover */
+/* btn-hover */
 .btn-hover {
-  -webkit-transition: color 300ms;
-  transition: color 300ms;
-  position: relative;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-transition: color 300ms;
+    transition: color 300ms;
+    position: relative;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
 
+    &::before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0);
+        -webkit-transform-origin: 50%;
+        transform-origin: 50%;
+        -webkit-transition-property: transform;
+        transition-property: transform;
+        -webkit-transition: 300ms ease-out;
+        transition: 300ms ease-out;
+    }
 
-  &::before {
-      content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transform-origin: 50%;;
-    transform-origin: 50%;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-    -webkit-transition: 300ms ease-out;
-    transition: 300ms ease-out;
-  }
-
-  &:hover::before {
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-  }
-
-
+    &:hover::before {
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1);
+    }
 }
 
 //btn-light
 .btn-light.btn-hover:hover {
-    background-color:$white;
+    background-color: $white;
     overflow: hidden;
 }
 .btn-light.btn-hover::before {
-      background: $gray-lightest;
-      overflow: hidden;
-      }
+    background: $gray-lightest;
+    overflow: hidden;
+}
 .btn-light.btn-hover:hover:before {
     overflow: hidden;
-    }
+}
 
 //btn-default
 .btn-default.btn-hover:hover {
     background-color: $white;
+    overflow: hidden;
 }
 .btn-default.btn-hover:before {
-      background: $gray-lightest;
-      }
+    background: $gray-lightest;
+    overflow: hidden;
+}
 
 //btn-primary
 .btn-primary.btn-hover:hover {
     background-color: $color-p2;
+    overflow: hidden;
 }
 .btn-primary.btn-hover:before {
-      background: lighten($color-p2, 7%);
-      }
+    background: lighten($color-p2, 7%);
+    overflow: hidden;
+}
 
 //btn-highlight
 .btn-highlight.btn-hover:hover {
     background-color: $color-p1;
+    overflow: hidden;
 }
 .btn-highlight.btn-hover:before {
-      background: lighten($color-p1, 7%);
-      }
+    background: lighten($color-p1, 7%);
+    overflow: hidden;
+}
 
 //btn-standout
 .btn-standout.btn-hover:hover {
     background-color: $color-p3;
+    overflow: hidden;
 }
 .btn-standout.btn-hover:before {
-      background: lighten($color-p3, 7%);;
-      }
+    background: lighten($color-p3, 7%);
+    overflow: hidden;
+}
 
 //btn-secondary
 .btn-secondary.btn-hover:hover {
-    background-color:$gray-lightest;
+    background-color: $gray-lightest;
+    overflow: hidden;
 }
 .btn-secondary.btn-hover:before {
-      background: $white;
-      }
-
+    background: $white;
+    overflow: hidden;
+}
 
 //OUTLINE BUTTONS HOVER
 //outline-primary
 .btn-outline-primary.btn-hover:hover {
-    background:inherit;
+    background: inherit;
     overflow: hidden;
-  }
+}
 .btn-outline-primary.btn-hover:before {
     background: $color-p2;
     overflow: hidden;
-  }
+}
 
 //outline-highlight
 .btn-outline-highlight.btn-hover:hover {
-    background:inherit;
+    background: inherit;
     overflow: hidden;
-  }
+}
 .btn-outline-highlight.btn-hover:before {
     background: $color-p1;
     overflow: hidden;
-  }
+}
 
 //outline-standout
 .btn-outline-standout.btn-hover:hover {
-    background:inherit;
+    background: inherit;
     overflow: hidden;
-  }
+}
 .btn-outline-standout.btn-hover:before {
     background: $color-p3;
     overflow: hidden;
-  }
+}
 
 //outline-secondary
 .btn-outline-secondary.btn-hover:hover {
-    background:inherit;
+    background: inherit;
     overflow: hidden;
-  }
+}
 .btn-outline-secondary.btn-hover:before {
     background: $gray;
     overflow: hidden;
-  }
+}
 
 //outline-light
 .btn-outline-light.btn-hover:hover {
-    background:inherit;
+    background: inherit;
     overflow: hidden;
-  }
+}
 .btn-outline-light.btn-hover:before {
     background: $white;
     overflow: hidden;
-  }
-
-
+}
 
 /* btn-next, prev */
-.btn-next span, .btn-prev span {
+.btn-next span,
+.btn-prev span {
     cursor: pointer;
     display: inline-block;
     position: relative;
@@ -345,14 +367,14 @@
 }
 
 .btn-next span:after {
-        content: '\39';
-        font-family: 'CaGov';
-        position: absolute;
-        opacity: 0;
-        top: 0;
-        right: -10px;
-        transition: 0.5s;
-    }
+    content: "\39";
+    font-family: "CaGov";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -10px;
+    transition: 0.5s;
+}
 
 .btn-next:hover span {
     padding-right: 25px;
@@ -362,10 +384,9 @@
     }
 }
 
-
 .btn-prev span:before {
-    content: '\38';
-    font-family: 'CaGov';
+    content: "\38";
+    font-family: "CaGov";
     position: absolute;
     opacity: 0;
     top: 0;
@@ -382,5 +403,5 @@
 }
 
 .btn-block {
-    white-space:normal;
+    white-space: normal;
 }
