Fixed timeline component structure #140, fixed search aria-labelledby id reference

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -23128,7 +23128,8 @@ html:not(.ie8) .stats-highlight img {
   }
 }
 
-.progress-bold::before, .progress-bold::after {
+.progress-bold::before,
+.progress-bold::after {
   top: 40%;
   border-top-width: 8px;
 }
@@ -23160,7 +23161,7 @@ html:not(.ie8) .stats-highlight img {
 .timeline-dot {
   left: -1rem;
   position: absolute;
-  top: 50%;
+  top: 2.5rem;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
