--- a/source/scss/cagov/progress-block.scss
+++ b/source/scss/cagov/progress-block.scss
@@ -7,7 +7,8 @@
     display: block;
     width: 100%;
     font-size: 0;
-    &::before, &::after {
+    &::before,
+    &::after {
         content: "";
         position: absolute;
         top: 50%;
@@ -27,20 +28,23 @@
 }
 
 @media (min-width: $screen-xs-min) {
-  .dot-line::before, .dot-line::after {
-      display: block;
-  }
+    .dot-line::before,
+    .dot-line::after {
+        display: block;
+    }
 }
 @media (max-width: $screen-xxs-max) {
-  .dot-line::before, .dot-line::after {
-      display: none;
-  }
+    .dot-line::before,
+    .dot-line::after {
+        display: none;
+    }
 }
 
 // bold border progress block
-.progress-bold::before, .progress-bold::after {
-  top: 40%;
-  border-top-width: 8px;
+.progress-bold::before,
+.progress-bold::after {
+    top: 40%;
+    border-top-width: 8px;
 }
 
 .dot-line-inner {
@@ -53,7 +57,7 @@
     border-style: solid;
     border-radius: 50%;
 
-        &::before {
+    &::before {
         content: "";
         position: absolute;
         top: 50%;
@@ -64,14 +68,14 @@
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
         border-radius: 50%;
-        }
+    }
 }
 
 //Vertical timeline
 .timeline-dot {
     left: -$spacer;
     position: absolute;
-    top: 50%;
+    top: 2.5rem;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
