Fixed negative border-radius valuein card headers #185

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -20977,7 +20977,7 @@ select:focus {
 .card .toggle-more {
   display: inline-block;
   color: #777777;
-  font-family: 'CaGov';
+  font-family: "CaGov";
   font-size: 22px;
   margin-left: -11px;
   /* Change icon to minus */
@@ -21022,7 +21022,7 @@ select:focus {
 }
 
 .card-header:first-child {
-  border-radius: -1px -1px 0 0;
+  border-radius: 0 0 0 0;
 }
 
 .card-footer {
@@ -21030,15 +21030,15 @@ select:focus {
 }
 
 .card-footer:last-child {
-  border-radius: 0 0 -1px -1px;
+  border-radius: 0 0 0 0;
 }
 
 .card-img-top {
-  border-radius: -1px -1px 0 0;
+  border-radius: 0 0 0 0;
 }
 
 .card-img-bottom {
-  border-radius: 0 0 -1px -1px;
+  border-radius: 0 0 0 0;
 }
 
 /* -----------------------------------------
