--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -176,7 +176,7 @@ $caret-width-large: 5px !default;
 $card-border-width: 1px;
 $card-border-radius: $border-radius-base;
 $card-border-color: #ddd;
-$card-border-radius-inner: ($card-border-radius - $card-border-width);
+$card-border-radius-inner: ($card-border-radius);
 $card-cap-bg: rgba(0, 0, 0, 0.065);
 $card-bg: $body-bg;
 $card-link-hover-color: $body-bg;
