updated template version to 5.6.1

--- a/css/cagov.font-only.css
+++ b/css/cagov.font-only.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.6 -  @version v5.6.0 -  12/10/2021 
+ * CA State Template v5.6 -  @version v5.6.1 -  2/4/2022 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    ICON FONTS - /source/scss/cagov/icon-font.scss
@@ -24,6 +24,10 @@
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.ca-gov-icon-delete:before {
+  content: "\ea22";
 }
 
 .ca-gov-icon-github:before {
@@ -222,7 +226,7 @@
   content: "\e9ac";
 }
 
-.ca-gov-icon-bambinton:before {
+.ca-gov-icon-badminton:before {
   content: "\e9e2";
 }
 
